--- a/kees-media-controller/kees.yml.example
+++ b/kees-media-controller/kees.yml.example
@@ -2,10 +2,10 @@ logging:
   debug: false
   spew_depth: 2
 server:
-  host: "atlas.goosecode.com"
-  port: "1935"
+  host: <HOST>
+  port: <PORT>
 device:
-  token: "cdplayer"
+  token: <TOKEN FROM API ADD>
   name: "stereo-rpi"
   version: "v0.0.1"
   controller: "sony-cdp291"
